--- a/app/src/main/res/drawable/rounded_filter.xml
+++ b/app/src/main/res/drawable/rounded_filter.xml
@@ -2,15 +2,7 @@
     android:shape="rectangle">
 
     <solid android:color="@color/primary" />
-    <stroke android:width="1dp"
-        android:color="@color/grey"
-        />
-
-    <padding android:left="1dp"
-        android:top="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        />
+    <stroke android:width="1dp" android:color="#ffb3b6" />
     <corners android:radius="32dp" />
 
 </shape>
