--- a/app/src/main/res/drawable/rounded_search.xml
+++ b/app/src/main/res/drawable/rounded_search.xml
@@ -3,7 +3,7 @@
     <solid android:color="#ffffffff"/>
 
     <stroke android:width="1dp"
-        android:color="@color/grey"
+        android:color="@color/search_boarder"
         />
 
     <padding android:left="1dp"
