--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,11 +2,43 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/padding">
+    android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:layout_width="0dp"
+            android:layout_height="@dimen/default_height"
+            android:layout_margin="@dimen/margin_low"
+            android:layout_weight="1"
+            android:background="@drawable/bg_search_view"
+            android:drawableEnd="@drawable/ic_search"
+            android:hint="@string/search"
+            android:paddingStart="@dimen/margin_medium"
+            android:paddingEnd="@dimen/margin_medium"
+            android:textColorHint="@color/colorTextSearch" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="@dimen/margin_low"
+            android:background="@drawable/bg_notification"
+            android:contentDescription="@string/notification_logo"
+            android:src="@drawable/ic_notifications" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/etSearchView"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_search"
@@ -27,59 +59,60 @@
 
     <ImageView
         android:id="@+id/ivNotification"
+        android:visibility="gone"
         android:layout_width="@dimen/notification"
         android:layout_height="@dimen/notification"
         android:src="@drawable/ic_notification"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.core.widget.NestedScrollView
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/etSearchView">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
-                android:textStyle="bold"
                 android:id="@+id/tvLatestNews"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_margin="@dimen/margin_low"
                 android:text="@string/latest_news"
                 android:textAlignment="textStart"
                 android:textColor="@color/text_black"
                 android:textSize="@dimen/text_large"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/playfair_display_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="@dimen/padding_medium"
                 android:id="@+id/rvTopHeadlines"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_low"
+                android:layout_marginBottom="@dimen/margin_low"
                 app:layout_constraintTop_toBottomOf="@+id/tvLatestNews" />
 
-
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="@dimen/padding"
-                android:layout_marginBottom="@dimen/padding"
                 android:id="@+id/rvFilter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_low"
+                android:layout_marginBottom="@dimen/margin_low"
                 app:layout_constraintBottom_toTopOf="@id/rvNewsList"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rvTopHeadlines" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="@dimen/padding_medium"
                 android:id="@+id/rvNewsList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_low"
+                android:layout_marginBottom="58dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +120,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
