--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.detail.NewsDetailFragment">
-
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contentContainer"
@@ -18,8 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <ImageView
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_news_icon"
+            android:scaleType="centerCrop"
             android:id="@+id/ivNewsImage"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +39,10 @@
             app:layout_constraintTop_toBottomOf="@+id/ivNewsImage"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="@dimen/height_edit_text"
             android:elevation="2dp"
             android:background="@drawable/rounded_news_title"
@@ -49,15 +51,14 @@
             app:layout_constraintTop_toTopOf="@id/headerCenter"
             app:layout_constraintBottom_toBottomOf="@id/headerCenter"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="@dimen/detail_image_height"
-            android:layout_height="wrap_content">
+            app:layout_constraintEnd_toEndOf="parent">
             <TextView
                 android:textColor="@color/text_black"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_medium"
                 app:layout_constraintEnd_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Sunday, 9 May 2021"
+                android:fontFamily="@font/nunito_light"
+                android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/tvDates"
                 android:layout_width="match_parent"
@@ -68,11 +69,12 @@
                 android:textColor="@color/text_black"
                 android:textSize="@dimen/text_medium"
                 android:layout_marginTop="@dimen/padding"
-                android:gravity="center"
+                android:gravity="left|top"
                 android:id="@+id/tvNewsTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Text text Text text Text text"
+                android:fontFamily="@font/playfair_display_semi_bold"
+                android:maxLines="3"
                 app:layout_constraintBottom_toTopOf="@id/tvPublishedBy"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,11 +82,12 @@
 
             <TextView
                 android:textColor="@color/text_black"
-                android:textSize="@dimen/text_small"
+                android:textSize="@dimen/text_medium"
                 app:layout_constraintTop_toBottomOf="@id/tvNewsTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:text="Published by"
+                android:fontFamily="@font/nunito_semi_bold"
+                android:maxLines="1"
                 android:id="@+id/tvPublishedBy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -100,6 +103,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
                 <TextView
+                    android:id="@+id/tvContent"
                     android:paddingStart="@dimen/text_medium"
                     android:paddingEnd="@dimen/text_medium"
                     android:textColor="@color/text_black"
@@ -109,8 +113,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/headerContainer"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:id="@+id/tvContent"
-                    android:text="@string/long_text"
+                    android:fontFamily="@font/nunito_light"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
         </ScrollView>
@@ -122,7 +125,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="@dimen/padding"
-        android:layout_marginBottom="@dimen/padding_high"
+        android:layout_marginBottom="@dimen/padding"
         android:tint="@color/white"
         android:backgroundTint="@color/territory"
         android:src="@drawable/ic_favorite"
