--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -3,17 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/padding_medium"
-    android:layout_marginEnd="@dimen/padding_medium">
+    android:layout_marginStart="@dimen/margin_low">
 
-    <TextView
+    <CheckedTextView
         android:id="@+id/tvFilter"
-        android:layout_width="@dimen/chip_width"
-        android:layout_height="@dimen/chip_height"
-        android:background="@drawable/rounded_filter_white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/margin_medium"
+        android:paddingEnd="@dimen/margin_medium"
+        android:paddingTop="@dimen/margin_low"
+        android:paddingBottom="@dimen/margin_low"
+        android:maxLines="1"
+        android:background="@drawable/bg_checkable_text_view"
         android:gravity="center"
-        android:text="sample"
         android:textColor="@color/text_black"
+        android:fontFamily="@font/nunito_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
