--- a/app/src/main/res/layout/item_headline_layout.xml
+++ b/app/src/main/res/layout/item_headline_layout.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-    </data>
+    <data/>
 
     <androidx.cardview.widget.CardView
-        android:layout_marginEnd="@dimen/padding_medium"
         android:id="@+id/cardViewHeadline"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/card_height"
+        android:layout_marginStart="@dimen/margin_low"
+        android:layout_marginEnd="@dimen/margin_low"
         app:cardCornerRadius="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/card_height">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             app:cardCornerRadius="18dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <ImageView
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_news_icon"
                     android:id="@+id/ivHeadlineImage"
+                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:background="@color/grey_tint"
                     android:padding="@dimen/padding"
@@ -39,44 +38,47 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:textSize="@dimen/text_small"
-                        android:textColor="@color/white"
-                        android:text="sample text her for testing content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:id="@+id/tvContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:id="@+id/tvHeadlineTitle"
-                        android:textSize="@dimen/text_large"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Title here" />
-
-                    <TextView
-                        android:textSize="@dimen/text_small"
-                        android:textColor="@color/white"
                         android:id="@+id/tvAuthor"
-                        app:layout_constraintBottom_toTopOf="@+id/tvHeadlineTitle"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Title here" />
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/nunito_semi_bold"
+                        android:maxLines="1"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_medium"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tvHeadlineTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/playfair_display_bold"
+                        android:textColor="@color/white"
+                        android:maxLines="3"
+                        android:textSize="@dimen/text_large"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_small"
+                        android:textColor="@color/white"
+                        android:maxLines="3"
+                        android:fontFamily="@font/nunito_light"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/tvContent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </FrameLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
+
 </layout>
 
