--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -51,6 +51,7 @@
                 app:endIconMode="clear_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:nextFocusDown="@id/tiFirstName"
                 app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
